@@ -4,6 +4,10 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-1 (opened February 9, 2010)
 
+	* envfit: did not pass weights to factorfit or to vectorfit when
+	the environmental variable was a single vector. Reported for
+	vectors by Richard Telford.
+
 	* CCorA: Fixed bug in presentation of variables in plots. Adds new
 	biplot types. General improvement in checking exceptional cases
 	improve stability.
